# hack-ide

./: CMakeCPack.cmake  CMakeLists.txt  COPYING  README.md  default.tmuxrc  gen_readme.sh  hackide  hackide.1  hackide.in  index.html  sample.hackide
.ide_data/: editor.vim  editor.viminfo  editor.vimrc  sandbox.pyhistory  shell.history
contexts/: python.hackide
package/: build.sh
py/: base.py  hackide.py  layout.py  main.py  rc_file.py  sandbox.py  startup.py  task.py  tmux.py
tasks/: cmd.task  interactive_shell.task  python.task  vim.task
test/: .gros.hackide.swp  .swn  .swo  .swp  3.hackide  5.hackide  embed1.hackide  embed2.hackide  gros.hackide  my.hackide  test.hackide
test/.ide_data/: editor.vim  editor.viminfo  editor.vimrc  f1.viminfo  f1.vimrc  shell.history  tmuxrc
